@@ -31,6 +31,7 @@ import org.dspace.core.Context;
 import org.dspace.core.LogHelper;
 import org.dspace.eperson.EPerson;
 import org.dspace.eperson.Group;
+import org.dspace.event.DetailType;
 import org.dspace.event.Event;
 import org.dspace.identifier.DOI;
 import org.dspace.identifier.DOIIdentifierProvider;
@@ -167,7 +168,7 @@ public class WorkspaceItemServiceImpl implements WorkspaceItemService {
                                           + collection.getID()));
 
         context.addEvent(new Event(Event.MODIFY, Constants.ITEM, item.getID(), null,
-                itemService.getIdentifiers(context, item)));
+                DetailType.INFO, itemService.getIdentifiers(context, item)));
 
         return workspaceItem;
     }
@@ -176,8 +177,7 @@ public class WorkspaceItemServiceImpl implements WorkspaceItemService {
     public WorkspaceItem create(Context c, WorkflowItem workflowItem) throws SQLException, AuthorizeException {
         WorkspaceItem potentialDuplicate = findByItem(c, workflowItem.getItem());
         if (potentialDuplicate != null) {
-            throw new IllegalArgumentException(String.format(
-                "A workspace item referring to item %s already exists (%d)",
+            throw new IllegalArgumentException("A workspace item referring to item %s already exists (%d)".formatted(
                 workflowItem.getItem().getID(),
                 potentialDuplicate.getID()
             ));
